--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 
 <body class="page">
 
-  <header class="header">
+  <header class="header page__header">
     <img src="./images/header-logo.svg" alt="Логотип" class="header__logo">
     <div class="header__lang">
       <a href="#" active class="header__lang-link header__lang-link_active">Ru</a>
       <a href="#"class="header__lang-link">En</a>
     </div>
   </header>
-<!--
-  <main class="content">
 
-    <section class="lead">
-      <h1 class="lead__title">Путешествия по России</h1>
-      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+  <main class="content page__content">
+
+    <section class="lead content__section">
+      <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+      <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей,&nbsp;а&nbsp;здесь.</p>
       <img src="./images/lead-polka.jpg" alt="Вагонная полка" class="lead__image">
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
-
-    <section class="intro">
+<!--
+    <section class="intro content__section">
       <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
@@ -40,7 +40,7 @@
       </ul>
     </section>
 
-    <section class="photo-grid">
+    <section class="photo-grid content__section">
       <img src="./images/photo-grid-train.jpg" alt="Вид из окна вагона" class="photo-grid__item">
       <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Горная вершина в облаках" class="photo-grid__item">
       <img src="./images/photo-grid-tuman.jpg" alt="Туман" class="photo-grid__item">
@@ -55,7 +55,7 @@
       <img src="./images/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__item">
     </section>
 
-    <ul class="places">
+    <ul class="places content__section">
       <li class="place">
         <h2 class="place__title">Куршская коса</h2>
         <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
@@ -111,16 +111,16 @@
       </li>
     </ul>
 
-    <section class="cover">
+    <section class="cover content__section">
       <h2 class="cover__title">До Байкала «на собаках»</h2>
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
       <div class="cover__overlay"></div>
       <div class="cover__background"></div>
     </section>
-
+-->
   </main>
-
-  <footer class="footer">
+<!--
+  <footer class="footer page__footer">
     <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
     <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
     <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
