--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <img src="./images/lead-polka.jpg" alt="Вагонная полка" class="lead__image">
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
-<!--
+
     <section class="intro content__section">
-      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <h2 class="intro__title">Чего&nbsp;мы&nbsp;там не&nbsp;видели?</h2>
       <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
         <li class="intro__list-item">Часовых поясов <span class="intro__list-span">11</span></li>
@@ -39,7 +39,7 @@
         <li class="intro__list-item">Аэропортов <span class="intro__list-span">241</span></li>
       </ul>
     </section>
-
+<!--
     <section class="photo-grid content__section">
       <img src="./images/photo-grid-train.jpg" alt="Вид из окна вагона" class="photo-grid__item">
       <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Горная вершина в облаках" class="photo-grid__item">
