--- a/index.html
+++ b/index.html
@@ -120,25 +120,27 @@
 
       </li>
     </ul>
-<!--
+
     <section class="cover content__section">
-      <h2 class="cover__title">До Байкала «на собаках»</h2>
-      <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-      <div class="cover__overlay"></div>
-      <div class="cover__background"></div>
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+        <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
+        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
+      </a>
     </section>
--->
+
   </main>
-<!--
+
   <footer class="footer page__footer">
-    <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-    <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-    <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
-    <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
-    <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+    <div class="footer__links">
+      <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+      <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+      <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+      <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+      <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+    </div>
     <p class="footer__copyright">© 2022. Сергей Зинченко</p>
   </footer>
--->
+
 </body>
 
 </html>
