--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <main class="content page__content">
 
-    <section class="lead content__section">
+   <section class="lead content__section">
       <h1 class="lead__title">Путешествия по&nbsp;России</h1>
       <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей,&nbsp;а&nbsp;здесь.</p>
       <img src="./images/lead-polka.jpg" alt="Вагонная полка" class="lead__image">
@@ -55,7 +55,7 @@
       <img src="./images/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__item">
     </section>
 
-    <ul class="places content__section content__places">
+    <ul class="places content__places">
       <li class="place content__place">
         <h2 class="place__title">Куршская коса</h2>
         <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
