--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <header class="header page__header">
     <img src="./images/header-logo.svg" alt="Логотип" class="header__logo">
     <div class="header__lang">
-      <a href="#" active class="header__lang-link header__lang-link_active">Ru</a>
-      <a href="#"class="header__lang-link">En</a>
+      <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+      <a href="#" class="header__lang-link">En</a>
     </div>
   </header>
 
@@ -83,10 +83,10 @@
       </li>
       <li class="place">
         <h2 class="place__title">Алтай</h2>
-        <img src="./images/place-altai.jpg" class="place__image">
+        <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
-          <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" alt="Алтай" class="place__link">Facebook</a>
+          <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
         </div>
         <div class="place_text">
           <p class="place__paragraph">Алтай — одно из красивейших мест в России.
