--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <h3 class="place__url-heading">URL</h3>
           <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
         </div>
-        <div class="place_text">
+        <div class="place__text">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
           <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
         </div>
