--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header page__header">
     <img src="./images/header-logo.svg" alt="Логотип" class="header__logo">
     <div class="header__lang">
-      <a href="#" class="header__lang-link header__lang-link_active" target="_blank">Ru</a>
+      <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
       <a href="#" class="header__lang-link">En</a>
     </div>
   </header>
